syntax = "proto3";

option java_package = "electionguard.protogen";
option java_outer_classname = "CommonProto";

message GenericChaumPedersenProof {
  ElementModP pad = 1; // a in the spec  // 1.0 only
  ElementModP data = 2; // b in the spec  // 1.0 only
  ElementModQ challenge = 3; // c in the spec
  ElementModQ response = 4; // v in the spec
}

// A 4096 bit unsigned int, big-endian.
// A member of the group Z mod P
message ElementModP {
  bytes value = 1;
}

// A 256 bit unsigned int, big-endian.
// A member of the group Z mod Q
message ElementModQ {
  bytes value = 1;
}

message ElGamalCiphertext {
  ElementModP pad = 1;
  ElementModP data = 2;
}

message SchnorrProof {
  ElementModP public_key = 1; // k in the spec
  ElementModP commitment = 2; // h in the spec // 1.0 only
  ElementModQ challenge = 3; // c in the spec
  ElementModQ response = 4; // u in the spec
}

// A 256 bit unsigned int, big-endian. Always exactly 32 bytes.
// Used as a hash, when Group operations are no longer needed on it.
message UInt256 {
  bytes value = 1;
}
